@@ -6,6 +6,8 @@ import ru.skillbox.dto.DialogDto;
 import ru.skillbox.entity.Dialog;
 import ru.skillbox.entity.Message;
 
+import java.util.Collections;
+import java.util.List;
 import java.util.NoSuchElementException;
 
 import static ru.skillbox.utils.impl.MapperAccountToDto.convertAccountToDto;
@@ -15,22 +17,18 @@ import static ru.skillbox.utils.impl.MapperMessageToDto.convertMessageToDto;
 @Slf4j
 public class MapperDialogToDto {
 
-    public static DialogDto convertToDto(Dialog dialog) {
+    public static DialogDto convertDialogToDto(Dialog dialog) {
         if (dialog == null) {
             return null;
         }
-        Message lastMessage = null;
-        try {
-            lastMessage = dialog.getMessages().getLast();
-        } catch (NoSuchElementException e) {
-            log.info("В диалоге {} нет сообщений ", dialog.getId() + e.getMessage());
-        }
+        List<Message> messages = dialog.getMessages() != null ? dialog.getMessages() : Collections.emptyList();
+
+        Message lastMessage = messages.isEmpty() ? null : messages.get(messages.size() - 1);
+
         return DialogDto.builder()
                 .id(dialog.getId())
+                .lastMessage(lastMessage != null ? MapperMessageToDto.convertMessageToDto(lastMessage) : null)
                 .unreadCount(dialog.getUnreadCount())
-                .conversationPartner(convertAccountToDto(dialog.getConversationPartner()))
-                .lastMessage(lastMessage != null ? convertMessageToDto(lastMessage) : null)
                 .build();
     }
-
 }
